mock-api/overlays/mock-api-headers-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mock-api-headers-middleware
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: 'https'
      X-Forwarded-Port: '443'
